# CE516-RT

./: .gitignore  README.md
robotics_final/: CMakeLists.txt  package.xml
robotics_final/config/: amcl_config.yaml  gz_bridge.yaml  rtabmap_slam.yaml
robotics_final/launch/: display.launch.py  gazebo.launch.py  localization.launch.py  pid_path_follower.launch.py
robotics_final/scripts/: global_path_planner.py  laser_frame_adapter.py  sensor_fusion_odom.py  trajectory_controller.py  wheel_interface.py
robotics_final/src/description/: robot.urdf
robotics_final/world/: depot.sdf
